Issue-123: set the size of page number buttons on mobile to 45px * 45px; hide 2 buttons on the mobile design; stick arrow buttons to fixed far ends.

--- a/assets/css/abstracts/_variables.scss
+++ b/assets/css/abstracts/_variables.scss
@@ -26,6 +26,7 @@ $grey-dark: #313131;
 $navy-dark: #162439;
 $navy: #203149;
 $navy-light: #2e405b;
+$navy-alt: #465d8b;
 
 $blue-alt: #5e82ae;
 $blue-alt-light:#8caabb;
